# propulsion_system_analysis

./: CMakeLists.txt  Dockerfile  README.md  main.cpp
include/: operationalPoint.h  propulsion_system.h
